feat: enhance commit selection and file management with improved logging and error handling